--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -40,3 +40,16 @@ services:
     build:
       context: .
       dockerfile: ./cmd/scanner/Dockerfile
+
+  # Runs the "scan-processor"
+  scan-processor:
+    depends_on:
+      mk-subscription:
+        condition: service_completed_successfully
+    environment:
+      PUBSUB_EMULATOR_HOST: pubsub:8085
+      PUBSUB_PROJECT_ID: test-project
+      BATCH_SIZE: 500
+    build:
+      context: .
+      dockerfile: ./cmd/scan-processor/Dockerfile
